# StarryChat

./: .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: acceptor.cpp.4AC82238FD8526EB.idx  acceptor.h.23C5150342EFC0FB.idx  async_logger.cpp.45E1D58779C7BEDD.idx  async_logging.h.3B1134879CF6D67C.idx  buffer.cpp.92D7C74FE6504632.idx  buffer.h.593D5D584C9F0588.idx  callbacks.h.C85537636232FC7D.idx  channel.cpp.159328214977A95A.idx  channel.h.2F79CD5978449E2C.idx  connector.cpp.3E2BB50934C8141F.idx  connector.h.AEBC4905131DCA31.idx  cpp_plugin.cpp.0D3761A1DEF5FD56.idx  cpp_plugin.h.F3CE21C09DB0FB9A.idx  cpp_service.cpp.3F6AC12E9A23C446.idx  cpp_service.h.A53F8024E3167BDE.idx  echo_client.cpp.684624A68F5736E1.idx  echo_server.cpp.F7E996E30A56674F.idx  epoll_poller.cpp.0561D3D35D834915.idx  epoll_poller.h.05EF39E40A09397A.idx  eventloop.cpp.4DE5EC61A3A753B1.idx  eventloop.h.D03F8B393E4F6534.idx  eventloop_thread.cpp.C5C974CADBBFB28A.idx  eventloop_thread.h.6D55C3DE506A080A.idx  eventloop_threadpool.cpp.056B6A42A674D53C.idx  eventloop_threadpool.h.0A6F4431E5CB6563.idx  exceptions.cpp.5EF7902A33CCDCD5.idx  exceptions.h.5609CED09BA12385.idx  inet_address.cpp.9E8ECFCEE811D4A8.idx  inet_address.h.3E4CA8A59C80C0D7.idx  log_file.cpp.D35F0568B11B6E7A.idx  log_file.h.70984452992AC0C7.idx  log_stream.h.2426C9F4F948CAA1.idx  logging.cpp.0D1A2DEECC775851.idx  logging.h.FC68EBE60D2D6A44.idx  (+27 more)
StarryChat/: CMakeLists.txt  chat_room.cpp  chat_room.h  chat_service_impl.cpp  chat_service_impl.h  config.cpp  config.h  db_manager.cpp  db_manager.h  main.cpp  message.cpp  message.h  message_service_impl.cpp  message_service_impl.h  redis_manager.cpp  redis_manager.h  user.cpp  user.h  user_service_impl.cpp  user_service_impl.h
StarryChat/orm/: CMakeLists.txt  connection.cpp  connection.h  connection_pool.cpp  connection_pool.h  exceptions.cpp  exceptions.h  model.cpp  model.h  pool_config.cpp  pool_config.h  query_builder.cpp  query_builder.h  result_set.cpp  result_set.h  transaction.cpp  transaction.h  types.h
StarryChat/protos/: chat.proto  message.proto  user.proto
StarryChat/sql/: table_schema.sql
cmake/: FindDependencies.cmake  ProjectSettings.cmake
config/: config.yaml
example/: CMakeLists.txt
example/StarryChatTest/: CMakeLists.txt  test_service.cpp
example/orm/: CMakeLists.txt  quick_test.cpp  test_utils.h
example/orm/models/: user.h
(+3 files in other folders)
